# TSPGeneticSolver

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Euclidean2DReader.hpp  ExplicitReaderFactory.hpp  GeneticAlgorithm.hpp  GeneticFunctions.hpp  GeographicalReader.hpp  MatrixReaders.hpp  NodeReader.hpp  Problem.hpp  PseudoEuclideanReader.hpp  Reader.hpp  ReaderFactory.hpp  TSPLibparser.hpp  TSPSpecification.hpp
perfTests/cpu/: TSPSolver  g202-1000.txt  g202-10000.txt  g202-50000.txt  g24-1000.txt  g24-10000.txt  g24-50000.txt  g431-1000.txt  g431-10000.txt  g431-50000.txt  g48-1000.txt  g48-10000.txt  g48-50000.txt  g96-1000.txt  g96-10000.txt  g96-50000.txt  script.sh
perfTests/gpu/: TSPSolver  g202-1000.txt  g202-10000.txt  g202-50000.txt  g24-1000.txt  g24-10000.txt  g24-50000.txt  g431-1000.txt  g431-10000.txt  g431-50000.txt  g48-1000.txt  g48-10000.txt  g48-50000.txt  g96-1000.txt  g96-10000.txt  g96-50000.txt
problems/: fri26.tsp
src/: CMakeLists.txt  main.cpp
tests/: lower_col.tsp  lower_col_diag.tsp  lower_row.tsp  lower_row_diag.tsp  upper_col.tsp  upper_col_diag.tsp  upper_row.tsp  upper_row_diag.tsp
